# TrefoilLang

./: CMakeLists.txt  README.md
include/: compiler.h  error.h  lexer.h  parser.h
src/: compiler.c  error.c  lexer.c  main.c
